fixed contrast for certain button things

--- a/discord_themes/addons/alky_CV_BetterAccentContrast.css
+++ b/discord_themes/addons/alky_CV_BetterAccentContrast.css
@@ -218,6 +218,11 @@ button[class*="lookFilled-"][class*="colorGreen-"],
   color: rgba(0,0,0,.9);
 }
 
+/* Sort & View button */
+.sortDropdown-hY93nR>*,
+.sortDropdown-hY93nR .sortDropdownText-3smleu,
+/* Unread button */
+.bar-wDIGjg>*,
 /* More Auto Complete Box (on hover & select) */
 .autocompleteRowVertical-EA9dCg[aria-selected="true"] .base-2v-uc0 .text-xs-normal-3SiVjE,
 .autocompleteRowVertical-EA9dCg[aria-selected="true"] .base-2v-uc0 .text-md-normal-304U3g,
